samples/ingress_routing/nginx_status_svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: nginx-status
  name: nginx-status
  namespace: ingress-nginx
spec:
  ports:
  - port: 18080
    protocol: TCP
    targetPort: 18080
  selector:
    app: ingress-nginx
  type: ClusterIP
